--- a/assets/css/sty.css
+++ b/assets/css/sty.css
@@ -3,7 +3,7 @@ body {
 }
 
 header {
-    background: #f0f0f0;
+    background: #808080;
     padding: 10px 0;
     text-align: center;
 }
@@ -30,7 +30,7 @@ header {
 }
 
 footer {
-    background: #f0f0f0;
+    background: #808080;
     text-align: center;
     padding: 10px 0;
     position: fixed;
