--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -575,12 +575,10 @@ ul li:hover ui.dropdown{
 }
 
 
- .ad {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-   margin-bottom: 40px;
-  gap: 10px;
+ .ad-a{
+      width: 30%
+      display: block:
+      margin: 0px auto;
  }
 
 
