--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -263,7 +263,7 @@ ul li:hover ui.dropdown{
   display: block;
 }
 
-.navbar {
+.navbar2 {
     list-style-type: none;
     margin: 0;
     padding: 0;
