--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -248,6 +248,11 @@ header .container {
                 
 }
 
+/*-----------------------------------*\
+ * #navbar2
+\*-----------------------------------*/
+
+
 .navbar2 {
     list-style-type: none;
     margin: 0;
